# FreetypeCVcaffe-windows

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  build.sh  demo_yolo_detect.sh
src/: caffe.patch  main.cpp  opencv_contrib.patch
zlib/: CMakeLists.txt
